Tool window: Navigate directly to Grav's system/config/system.yaml file from the tool window via a link