@@ -1,15 +1,20 @@
 package net.offbeatpioneer.intellij.plugins.grav.extensions.toolwindow;
 
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.WriteCommandAction;
+import com.intellij.openapi.project.DumbAware;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.MessageType;
 import com.intellij.openapi.vfs.LocalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
 import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowFactory;
 import com.intellij.psi.*;
 import com.intellij.psi.impl.smartPointers.SmartPointerManagerImpl;
+import com.intellij.ui.components.labels.ActionLink;
 import com.intellij.ui.content.Content;
 import com.intellij.ui.content.ContentFactory;
 import com.intellij.util.ThrowableRunnable;
@@ -27,6 +32,7 @@ import javax.swing.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.io.File;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -39,19 +45,22 @@ import java.util.Objects;
  * @since 2017-08-24
  */
 public class SystemSettingsToolWindowFactory implements ToolWindowFactory, PsiTreeChangeListener {
-    private final static String SYSTEM_SYSTEM_CONFIG_FILE = "system/config/system.yaml";
-    private final static String USER_SYSTEM_CONFIG_FILE = "user/config/system.yaml";
+//    private final static String SYSTEM_SYSTEM_CONFIG_FILE = "system/config/system.yaml";
+//    private final static String USER_SYSTEM_CONFIG_FILE = "user/config/system.yaml";
 
     private ToolWindow toolWindow;
     private JPanel mainPanel;
     private JCheckBox cbTranslationEnabled;
     private JCheckBox cbActiveLanguageBrowser;
     private JCheckBox cbIncludeDefaultLang;
+    private ActionLink navigateToFileLink;
     private SmartPsiElementPointer<YAMLFile> systemYamlFile;
     private SmartPsiElementPointer<YAMLDocument> systemDocument;
     private boolean errorOccurred = false;
     private YAMLElementGenerator generator;
     private List<Triple<String[], Class, JComponent>> componentList = new ArrayList<>();
+    private @NotNull Project project;
+    GravSystemYamlConfigFiles gravSystemYamlConfigFilesLevel = GravSystemYamlConfigFiles.GRAV_1_6_30;
 
     public SystemSettingsToolWindowFactory() {
 
@@ -60,6 +69,7 @@ public class SystemSettingsToolWindowFactory implements ToolWindowFactory, PsiTr
     @Override
     public void createToolWindowContent(@NotNull Project project, @NotNull ToolWindow toolWindow) {
         this.toolWindow = toolWindow;
+        this.project = project;
         ContentFactory contentFactory = ContentFactory.SERVICE.getInstance();
         Content content;
         if (!errorOccurred) {
@@ -75,10 +85,31 @@ public class SystemSettingsToolWindowFactory implements ToolWindowFactory, PsiTr
         title += " for '" + project.getName() + "'";
         PsiManager.getInstance(project).addPsiTreeChangeListener(this);
         toolWindow.setTitle(title);
+
+    }
+
+    public void createUIComponents() {
+        navigateToFileLink = new ActionLink("Navigate to File", new AnAction() {
+            @Override
+            public void actionPerformed(AnActionEvent e) {
+//                project.getBasePath()
+//                FileCreateUtil.getChildDirectory()
+                if (Objects.isNull(project) || Objects.isNull(project.getBasePath())) return;
+                VirtualFile virtualFile = VirtualFileManager.getInstance().findFileByNioPath(Paths.get(project.getBasePath()));
+//                VirtualFile virtualFile = VirtualFileManager.getInstance().refreshAndFindFileByNioPath(Paths.get(srcPath));
+                if (Objects.nonNull(virtualFile)) {
+                    VirtualFile fileByRelativePath = virtualFile.findFileByRelativePath(gravSystemYamlConfigFilesLevel.getSystemYamlPath());
+                    PsiManager instance = PsiManager.getInstance(project);
+                    if (Objects.nonNull(fileByRelativePath) && Objects.nonNull(instance.findFile(fileByRelativePath)))
+                        instance.findFile(fileByRelativePath).navigate(true);
+                }
+            }
+        });
     }
 
     @Override
-    public void init(ToolWindow window) {
+    public void init(@NotNull ToolWindow window) {
+
         componentList.add(new Triple<>(new String[]{"languages", "translations"}, Boolean.class, cbTranslationEnabled));
         componentList.add(new Triple<>(new String[]{"languages", "http_accept_language"}, Boolean.class, cbActiveLanguageBrowser));
         componentList.add(new Triple<>(new String[]{"languages", "include_default_lang"}, Boolean.class, cbIncludeDefaultLang));
@@ -91,21 +122,16 @@ public class SystemSettingsToolWindowFactory implements ToolWindowFactory, PsiTr
     }
 
     private void refreshComponents(boolean addListener) {
-        Project firstProject = ProjectChecker.getFirstOpenedProject();
-        if (firstProject == null) return;
-        ApplicationManager.getApplication().runReadAction(new Runnable() {
-            @Override
-            public void run() {
+        Project firstProject = ProjectChecker.getFirstOpenedProject() != null ? ProjectChecker.getFirstOpenedProject() : project;
+        ApplicationManager.getApplication().runReadAction(() -> {
+            systemYamlFile = getGravSystemYamlFile(firstProject);
+            if (systemYamlFile != null && systemYamlFile.getElement() != null && systemYamlFile.getElement().getDocuments().size() > 0) {
+                systemDocument = SmartPointerManagerImpl.getInstance(firstProject)
+                        .createSmartPsiElementPointer(systemYamlFile.getElement().getDocuments().get(0), systemYamlFile.getElement());
+            }
 
-                systemYamlFile = getSystemFile(firstProject);
-                if (systemYamlFile != null && systemYamlFile.getElement() != null && systemYamlFile.getElement().getDocuments().size() > 0) {
-                    systemDocument = SmartPointerManagerImpl.getInstance(firstProject)
-                            .createSmartPsiElementPointer(systemYamlFile.getElement().getDocuments().get(0), systemYamlFile.getElement());
-                }
-
-                for (Triple<String[], Class, JComponent> each : componentList) {
-                    applyGravSettings(each.getFirst(), each.getSecond(), each.getThird(), firstProject, addListener);
-                }
+            for (Triple<String[], Class, JComponent> each : componentList) {
+                applyGravSettings(each.getFirst(), each.getSecond(), each.getThird(), firstProject, addListener);
             }
         });
     }
@@ -189,29 +215,26 @@ public class SystemSettingsToolWindowFactory implements ToolWindowFactory, PsiTr
         boolean pluginEnabled = GravProjectComponent.isEnabled(project);
         generator = YAMLElementGenerator.getInstance(project);
         if (pluginEnabled) {
-            ApplicationManager.getApplication().runReadAction(new Runnable() {
-                @Override
-                public void run() {
-
-                    systemYamlFile = getSystemFile(project);
-                    if (systemYamlFile != null && systemYamlFile.getElement() != null && systemYamlFile.getElement().getDocuments().size() > 0) {
-                        PsiManager.getInstance(project).addPsiTreeChangeListener(SystemSettingsToolWindowFactory.this);
-                        systemDocument = SmartPointerManagerImpl.getInstance(project).createSmartPsiElementPointer(systemYamlFile.getElement().getDocuments().get(0), systemYamlFile.getElement());
-                    }
+            ApplicationManager.getApplication().runReadAction(() -> {
+                systemYamlFile = getGravSystemYamlFile(project);
+                if (systemYamlFile != null && systemYamlFile.getElement() != null && systemYamlFile.getElement().getDocuments().size() > 0) {
+                    PsiManager.getInstance(project).addPsiTreeChangeListener(SystemSettingsToolWindowFactory.this, () -> {
+                    });
+                    systemDocument = SmartPointerManagerImpl.getInstance(project).createSmartPsiElementPointer(systemYamlFile.getElement().getDocuments().get(0), systemYamlFile.getElement());
                 }
             });
         }
         return pluginEnabled && systemYamlFile != null && systemDocument != null;
     }
 
-    private SmartPsiElementPointer<YAMLFile> getSystemFile(@NotNull Project project) {
+    private SmartPsiElementPointer<YAMLFile> getGravSystemYamlFile(@NotNull Project project) {
         String prefix = "";
         if (Objects.isNull(project.getBasePath())) {
             IdeHelper.notifyShowGenericErrorMessage(project);
         }
         VirtualFile projectPath = LocalFileSystem.getInstance().findFileByIoFile(new File(project.getBasePath()));
         if (Objects.nonNull(projectPath) && projectPath.exists()) {
-            String path = prefix + SYSTEM_SYSTEM_CONFIG_FILE;
+            String path = prefix + gravSystemYamlConfigFilesLevel.getSystemYamlPath();
             VirtualFile systemFile = projectPath.findFileByRelativePath(path);
             if (systemFile != null) {
                 PsiFile psiFile = PsiManager.getInstance(project).findFile(systemFile);
